--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 description = "Interactive Task Manager TUI"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["textual"]
+dependencies = [
+    "textual",
+]
